@@ -23,6 +23,9 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2001-10-30  Cristy  <cristy@mystic.es.dupont.com>
+	* Added support for On-the-air bitmap.
+
 2001-10-29  Cristy  <cristy@mystic.es.dupont.com>
 	* ImageMagick now has a registry for storing image blobs.
 
